core/src/main/web/app/styles/ui.scss
/*
 *  Copyright 2014 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

/* Our typeface makes vertical alignment... well, not so good,
   so let's help it along a little bit by adjusting padding. */
.btn-xs {
  padding-top: $padding-xs-vertical + 2;
  padding-bottom: $padding-xs-vertical - 1;
  // correct font-awesome (not our typeface)
  .fa {
    position: relative;
    top: -2px;
  }
}

.text-danger {
  color: #a94442 !important;
}

.text-success {
  color: #3c763d !important;
}

label, input, button, select, textarea {
  font-size: $font-size-base;
  font-weight: normal;
  line-height: $grid-row-height;
}

pre {
  border-radius: 0;
}

ul {
  padding: 0;
}

.nav-tabs.nav {
  margin-bottom: 20px;
}

.plugin-active {
  color: limegreen;
}

.plugin-url.bkr {
  font-size: 18px;
}

.plugin-loading {
  color: orange;
}

.plugin-known {
  color: lightgray;
}

.plugin-invisible {
  opacity: 0.0;
}

.plugin-status {
  font-size: 150%;
  vertical-align: -2px;
}

.body-box {
  border: solid 1px $cell-border;
}

.bk-icon {
  position: relative;
  display: inline-block;
}

.new-folder.bk-icon {
  background-repeat: no-repeat;
  background-image: url(../images/new_folder.svg);
  width: 20px;
  height: 17px;
}

.folder-icon {
  @extend .bk-icon;
  width: 16px;
  height: 13px;
  top: 2px;
  margin-right: 11px;
  background-repeat: no-repeat;
  background-image: url(../images/folder.svg);
}

